# MicroMUD

./: Cargo.toml
saves/: Devin.json
src/: combat.rs  game.rs  inventory.rs  io_manager.rs  item.rs  main.rs  player.rs  shop.rs  skilling.rs  skills.rs  startup.rs
src/combat/: ability.rs  monster.rs  monsters.rs  rat.rs  tree_spirit.rs
src/combat/monster/: monster.rs
src/combat/monsters/: giant_rat copy.rs  giant_rat.rs  rat.rs  slime.rs  tree_spirit.rs
src/item/: armor.rs  bonuses.rs  food.rs  weapon.rs
src/shop/: prices.rs
src/skills/: firemaking.rs  woodcutting.rs
src/skills/firemaking/: logdata.rs
src/skills/woodcutting/: tree.rs
